try to fix footer not hidden on mobile phone

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -171,3 +171,4 @@ a:hover {text-decoration:none; color:#000;}
 .wordpress {visibility:hidden;}
 .wordpress:hover {visibility:hidden;}
 .wordpress:active {visibility:hidden;}
+#footer .w {visibility:hidden;}
